<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:background="@color/colorPrimaryLight">

    <TextView
        android:id="@+id/tv_recipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poiret_one"
        android:gravity="end"
        android:paddingBottom="@dimen/recipeLabelPaddingVertical"
        android:paddingEnd="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="16dp"
        android:paddingStart="8dp"
        android:paddingTop="@dimen/recipeLabelPaddingVertical"
        android:textAllCaps="true"
        android:textColor="@color/colorTextPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_recipeImage"
        app:layout_constraintTop_toBottomOf="@+id/iv_recipeImage"
        tools:text="Yellow Cake" />


    <ImageView
        android:id="@+id/iv_recipeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ctn_desc_recipe_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yellow_cake" />

    <RelativeLayout
        android:id="@+id/rl_servingsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="12dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_servingsIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/ctn_desc_restaurant_icon"
            app:srcCompat="@drawable/ic_restaurant_menu_24dp" />

        <TextView
            android:id="@+id/tv_servingsQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_servingsIcon"
            android:layout_toRightOf="@+id/iv_servingsIcon"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:textStyle="italic"
            tools:text="8" />

        <TextView
            android:id="@+id/tv_servingsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_servingsQty"
            android:layout_toRightOf="@id/tv_servingsQty"
            android:gravity="end|center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="16dp"
            android:text="@string/servings_label"
            android:textSize="14sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_downArrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/ctn_desc_arrow_down_icon"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recipeImage"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_arrow_drop_down_circle_48dp" />

    <TextView
        android:id="@+id/tv_ingredientsQty"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_recipeImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_recipeImage"
        app:layout_constraintTop_toBottomOf="@+id/tv_stepsQty"
        tools:text="6" />

    <TextView
        android:id="@+id/tv_ingredientsLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorBackgroundTransparent"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:paddingRight="36dp"
        android:paddingTop="6dp"
        android:text="@string/ingredients_label"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ingredientsQty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_ingredientsQty"
        app:layout_constraintTop_toTopOf="@+id/tv_ingredientsQty"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_stepsQty"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/iv_downArrow"
        app:layout_constraintStart_toStartOf="@+id/tv_ingredientsQty"
        tools:text="12" />

    <TextView
        android:id="@+id/tv_stepsLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorBackgroundTransparent"
        android:paddingBottom="6dp"
        android:paddingLeft="8dp"
        android:paddingRight="36dp"
        android:paddingTop="6dp"
        android:text="@string/steps_label"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/tv_stepsQty"
        app:layout_constraintEnd_toEndOf="@+id/tv_ingredientsLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_stepsQty"
        app:layout_constraintTop_toTopOf="@+id/tv_stepsQty"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="230dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="440dp" />

</android.support.constraint.ConstraintLayout>